# ezjsonrpc

./: Cargo.toml  README.md  tmp.txt
ezjsonrpc/: Cargo.toml
ezjsonrpc-macros/: Cargo.toml
ezjsonrpc-macros/src/: lib.rs
ezjsonrpc/examples/: simple.rs
ezjsonrpc/src/: lib.rs
